argo/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    argocd.argoproj.io/sync-wave: "99"
  name: argo-release-argocd-server
  namespace: argocd
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argo-release-argocd-server
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - secretName: argocd-server-tls
